@@ -20,152 +20,149 @@
     For existing users, these are <b>Not</b> automatically transferred to <b><em>.local/share/found</em></b> This is to avoid overwriting changes you may have made yourself. However, you may wish to copy them manually. If so, check you don't inadvertently create duplicates.
     <br><br>
     <b>V 1.7.4</b><br>
-    Will Godfrey Companion<br>
-    <div class="tab">
-    Cracked Chimes
-    </div>
+      Will Godfrey Companion<br>
+      <div class="tab">
+        Cracked Chimes
+      </div>
     <br>
     <b>V 2.0</b><br>
     At this time a major revision was done to ensure all default instruments had internal names that matched the filenames. This had been causing a lot of confusion. Also, where possible the instrument 'type' field was corrected on many of these, or added if it was missing. There are still some undefined as it was impossible to guess the intention of the designer.<br><br>
     <b>V 2.0.2</b><br>
     Will Godfrey Companion
-    <div class="tab">
-    Pad Chimes
-    </div>
+      <div class="tab">
+        Pad Chimes
+      </div>
     <br>
     <b>V 2.1.0</b><br>
     Will Godfrey Companion
-    <div class="tab">
-    Scaffold Pole<br>
-    Sharp Sweep Synth<br>
-    Sharp Sweep Multi<br>
-    Surf
-    </div>
+      <div class="tab">
+        Scaffold Pole<br>
+        Sharp Sweep Synth<br>
+        Sharp Sweep Multi<br>
+        Surf
+      </div>
     Drums
-    <div class="tab">
-    Stick Hit
-    </div>
+      <div class="tab">
+        Stick Hit
+      </div>
     <br>
     <b>V 2.1.2</b><br>
     Drums
-    <div class="tab">
-    Hugh's Kit<br>
-    Tom Toms
-    </div>
+      <div class="tab">
+        Hugh's Kit<br>
+        Tom Toms
+      </div>
     Guitar
-    <div class="tab">
-    Dist Guitar 6<br>
-    Twang<br>
-    Twang 2
-    </div>
+      <div class="tab">
+        Dist Guitar 6<br>
+        Twang<br>
+        Twang 2
+      </div>
     Misc
-    <div class="tab">
-    Tubular Bells
-    </div>
+      <div class="tab">
+        Tubular Bells
+      </div>
     Strings
-    <div class="tab">
-    Antique Strings<br>
-    Smooth Strings
-    </div>
+      <div class="tab">
+        Antique Strings<br>
+        Smooth Strings
+      </div>
     Synth
-    <div class="tab">
-    Dungeon Lead<br>
-    Shepard Synth
-    </div>
+      <div class="tab">
+        Dungeon Lead<br>
+        Shepard Synth
+      </div>
     <br>
     <b>V 2.2.0</b><br>
     Will Godfrey Companion
-    <div class="tab">
-    Theatre Organ
-    </div>
+      <div class="tab">
+        Theatre Organ
+      </div>
     <br>
     <b>V 2.2.1</b><br>
     Drums
-    <div class="tab">
-    Ride
-    </div>
+      <div class="tab">
+        Ride
+      </div>
     Synth
-    <div class="tab">
-    Nostalgia
-    </div>
+      <div class="tab">
+        Nostalgia
+      </div>
     <br>
     <b>V 2.2.2</b><br>
     Will Godfrey Companion
-    <div class="tab">
-    Cello
-    </div>
+      <div class="tab">
+        Cello
+      </div>
     Drums
-    <div class="tab">
-    Wood Block<br>
-    Finger Snap
-    </div>
+      <div class="tab">
+        Wood Block<br>
+        Finger Snap
+      </div>
     <br>
     <b>V 2.3.0</b><br>
     Bass
-    <div class="tab">
-    electric bass
-    <br>
-    upright bass
-    </div>
+      <div class="tab">
+        electric bass<br>
+        upright bass
+      </div>
     Drums
-    <div class="tab">
-    Ride Crash
-    </div>
-    <div class="tab">
-    Ride Crash Mod 1
-    </div>
-    <div class="tab">
-    Crash Full 2
-    </div>
-    <div class="tab">
-    Soft Shaker
-    </div>
+      <div class="tab">
+        Ride Crash<br>
+        Ride Crash Mod 1<br>
+        Crash Full 2<br>
+        Soft Shaker
+      </div>
     Guitar
-    <div class="tab">
-    acoustic guitar<br>
-    electric guitar<br>
-    electric 2<br>
-    folk guitar<br>
-    resonator<br>
-    resonator 2
-    </div>
+      <div class="tab">
+        acoustic guitar<br>
+        electric guitar<br>
+        electric 2<br>
+        folk guitar<br>
+        resonator<br>
+        resonator 2
+      </div>
     Strings
-    <div class="tab">
-    stringish
-    </div>
+      <div class="tab">
+        stringish
+      </div>
     <br>
     <b>V 2.3.2</b><br>
     Choir and Voice
-    <div class="tab">
-    Dooo
-    </div>
+      <div class="tab">
+        Dooo
+      </div>
     Reed and Wind
-    <div class="tab">
-    Dooo Flute
-    </div>
+      <div class="tab">
+        Dooo Flute
+      </div>
     Drums
-    <div class="tab">
-    Gritty Shaker
-    </div>
+      <div class="tab">
+        Gritty Shaker
+      </div>
     Noises
-    <div class="tab">
-    Frogs
-    </div>
+      <div class="tab">
+        Frogs
+      </div>
     <br>
-    <b>master</b><br>
+    <b>Current master</b><br>
     Drums
-    <div class="tab">
-    Soft Kick<br>
-    rimshot low<br>
-    rimshot<br>
-    rimshot lite<br>
-    </div>
+      <div class="tab">
+        Soft Kick<br>
+        rimshot low<br>
+        rimshot<br>
+        rimshot lite<br>
+      </div>
     Noises
-    <div class="tab">
-    Slow Wind<br>
-    Explosion<br>
-    Explosion Canyon<br>
-    </div>
+      <div class="tab">
+        Slow Wind<br>
+        Explosion<br>
+        Explosion Canyon<br>
+      </div>
+    Organ
+      <div class="tab">
+        True Drawbars
+      </div>
     </p>
   </body>
 </html>
