@@ -1,5 +1,10 @@
 yoshimi 2.3.2 M
 
+2024-3-24 Will
+Added missing .xiy file needed for Dooo Flute.
+Added True Drawbars instrument.
+Updated User Guide.
+
 2024-3-22 Will
 bn 2322
 Added more instruments to Drums and Noises
